--- a/Week1/Digital Resume/index.html
+++ b/Week1/Digital Resume/index.html
@@ -152,7 +152,7 @@
         <a href="#" class="button">Home</a>
       </div>
       <div id="photo">
-        <img src="./images/photofme.jpg" alt="photofme" />
+        <img src="photofme.jpg" alt="photofme" />
       </div>
     </aside>
   </body>
