made some changes

--- a/Week1/Digital Resume/index.html
+++ b/Week1/Digital Resume/index.html
@@ -20,7 +20,7 @@
       </div>
     </nav>
     <main>
-      <div id="info">
+      <div class="container">
         <div id="information"></div>
         <h2>Personal Information</h2>
         <br />
@@ -31,30 +31,20 @@
           aliquip ex ea commodo consequat.
         </p>
       </div>
-      <div id="education">
+      <div class="container">
         <div id="graduation">
           <h2>Education</h2>
           <br />
-          <table>
-            <tr>
-              <td>
-                Boğaziçi University – Molecular Biology and Genetics
-                /2011(Undergraduate)
-              </td>
-            </tr>
-            <tr>
-              <td>
-                Istanbul Sehir University – Political Science and International
-                Affairs /2013 (Graduate)
-              </td>
-            </tr>
-            <tr>
-              <td>Anadolu University – Economics / 2015 (Undergraduate)</td>
-            </tr>
-          </table>
+
+          <p>Boğaziçi University – Molecular Biology and Genetics
+            /2011(Undergraduate)</p>
+          <p>Istanbul Sehir University – Political Science and International
+            Affairs /2013 (Graduate)</p>
+           <p>Anadolu University – Economics / 2015 (Undergraduate)</p>
+          
         </div>
       </div>
-      <div id="work">
+      <div class="container">
         <div id="workexperince">
           <h2>Work Experience</h2>
           <br />
@@ -66,7 +56,7 @@
           </p>
         </div>
       </div>
-      <div id="contact">
+      <div class="container">
         <div id="contacts">
           <h2 id="contact-title">Contact</h2>
           <br />
@@ -152,7 +142,7 @@
         <a href="#" class="button">Home</a>
       </div>
       <div id="photo">
-        <img src="photofme.jpg" alt="photofme" />
+        <img src="./images/photofme.jpg" alt="photofme" />
       </div>
     </aside>
   </body>
